--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,34 @@
 Colors used:
 Primary color (purple): #7E49F6;
 Secondary color (Cyan?): #54E9D1;
-Pink: #FD5475
+Pink/red: #FD5475
 Jaune: #FDD537
 Light pink: #FD9EF2
 */
 body {
+  background-color: #ffffff
   font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.6;
+  color: #ffffff
+}
+h1, h2, h3, h4 {
+  line-height: 1.4;
+}
+h1 {
+  font-size: 2.75em;
+  font-weight: 700;
+}
+h2 {
+  font-size: 2.25em;
+  font-weight: 700;
+}
+h3 {
+  font-size: 1.75em;
+  font-weight: 600;
+}
+h4 {
+  font-size: 1.35em;
+  font-weight: 500;
 }
