Moved css link position

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ Jaune: #FDD537
 Light pink: #FD9EF2
 */
 body {
-  background-color: #ffffff
+  background-color: #ffffff;
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   font-weight: 400;
