--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.6;
-  color: #ffffff
+  color: #2e2e2e
 }
 h1, h2, h3, h4 {
   line-height: 1.4;
