--- a/css/style.css
+++ b/css/style.css
@@ -14,44 +14,55 @@ body {
   line-height: 1.6;
   color: #2e2e2e
 }
+
 h1, h2, h3, h4 {
   line-height: 1.4;
 }
+
 h1 {
   font-size: 2.75em;
   font-weight: 700;
 }
+
 h2 {
   font-size: 2.25em;
   font-weight: 700;
 }
+
 h3 {
   font-size: 1.75em;
   font-weight: 600;
 }
+
 h4 {
   font-size: 1.35em;
   font-weight: 500;
 }
+
 img {
   width: 100%
 }
+
 a {
   color: #7E49F6;
   text-decoration: none;
 }
+
 a:visited {
   color: #b852f7;
 }
+
 a:hover,
 a:focus {
   color: #54E9D1;
   text-decoration: underline;
 }
+
 a:active {
   color: #b852f7;
 }
-.button{
+
+.button {
   display: inline-block;
   background-color: #7E49F6;
   color: #000000;
@@ -61,10 +72,12 @@ a:active {
   border-bottom: 2px solid #54E9D1;
   transition: 0.2s opacity;
 }
+
 .button:hover {
   opacity: 0.8;
   text-decoration: none;
 }
+
 .button:active,
 .button:focus {
   background-color: #54E9D1;
@@ -73,17 +86,26 @@ a:active {
   opacity: 0.8;
   text-decoration: none;
 }
+
 .button.contact {
   background-color: #FDD537;
   color: #000000;
   text-transform: uppercase;
   border-bottom: 2px solid #000000;
 }
+
 .button.contact:hover {
   background-color: #000000;
   color: #FDD537;
 }
+
 .button.contact:active {
   background-color: #000000;
   color: #ffffff;
+}
+header {
+  background-color: #7E49F6;
+  padding: 0.625em;
+  border-radius: 3px;
+  border-bottom: 2px solid #FDD537
 }
