--- a/css/style.css
+++ b/css/style.css
@@ -103,9 +103,6 @@ a:active {
   background-color: #000000;
   color: #ffffff;
 }
-header {
-  background-color: #7E49F6;
-  padding: 0.625em;
-  border-radius: 3px;
-  border-bottom: 2px solid #FDD537
+svg {
+  max-width: 32px;
 }
