--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ a:active {
 .button {
   display: inline-block;
   background-color: #7E49F6;
-  color: white;
+  color: white !important;
   font-weight: 700;
   text-decoration: none;
   padding: 10px;
@@ -93,7 +93,7 @@ a:active {
 .button:active,
 .button:focus {
   background-color: #54E9D1;
-  color: #000000;
+  color: #ffffff;
   border-bottom: 2px solid #7E49F6;
   opacity: 0.8;
   text-decoration: none;
@@ -200,7 +200,7 @@ nav>ul>li>a:hover {
   padding: 0 15px;
   text-transform: uppercase;
   background-color: #7E49F6;
-  color: #54E9D1;
+  color: #ffffff;
   font-weight: 700;
   padding: 10px;
   border-radius: 3px;
