--- a/css/style.css
+++ b/css/style.css
@@ -160,30 +160,21 @@ svg {
 }
 
 .logo {
-  max-width: 85px;
+  max-width: 65px;
 }
 
 header {
   position: fixed;
   width: 100%;
   background-color: #ffffff;
-  text-align: center;
-  padding: 10px 0;
+  padding: 10px 0 4px;
   box-shadow: 3px 3px 2px 0px rgba(5, 255, 239, 0.75);
-}
-
-nav {
-  display: inline-block;
-  width: 100%;
 }
 
 nav>ul {
   list-style-type: none;
   padding: 0;
-}
-
-nav>ul>li {
-  display: inline-block;
+  margin: 0;
 }
 
 nav>ul>li>a {
@@ -224,6 +215,33 @@ nav>ul>li>a:active {
   transition: 0.2s opacity;
 }
 
+.navtoggle li:not(:last-child) {
+  display: none;
+  padding: 0 0 10px;
+}
+
+.navtoggle, .navtoggle.responsive {
+  position: relative;
+}
+
+.navtoggle.responsive nav {
+  padding: 24px 0 0;
+}
+
+.navtoggle li .icon {
+  position: absolute;
+  right: 0;
+  top: 2px;
+  font-size: 30px;
+  padding-right: 0, 0;
+}
+
+.navtoggle.responsive li  {
+  display: block;
+  padding: 10px 0;
+  border-top: 1px solid #54E9D1;
+}
+
 #hero {
   background-color: #ffffff;
   color: #2e2e2e;
@@ -232,7 +250,7 @@ nav>ul>li>a:active {
 }
 
 main {
-  padding-top: 154px;
+  padding-top: 90.55px;
 }
 
 #contact {
@@ -308,9 +326,9 @@ main {
 }
 
 /* ==============================
-Medium devices (640px and larger)
+Medium devices (641px and larger)
 ================================= */
-@media only screen and (min-width: 640px) {
+@media only screen and (min-width: 641px) {
   header {
     text-align: unset;
     padding: 20px 0 13px;
@@ -321,6 +339,22 @@ Medium devices (640px and larger)
     float: right;
     margin-top: 4px;
   }
+
+  nav > ul {
+  margin: 1em 0;
+}
+
+  nav>ul>li {
+    display: inline-block;
+  }
+
+.navtoggle li:not(:last-child) {
+  display: inline-block;
+}
+
+.navtoggle li:last-child {
+  display: none;
+}
 
   .col-md-6 {
     width: 50%;
