--- a/css/style.css
+++ b/css/style.css
@@ -135,8 +135,7 @@ svg {
 }
 
 .row {
-    margin: 25px 0;
-    /* 25px top and bottom, 0 left and right */
+    margin: 25px 0; /* 25px top and bottom, 0 left and right */
 }
 
 .row::after {
